<resources>
    <string name="app_name">Money Manager</string>
    <string name="other">Other</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="record">RECORD</string>
    <string name="records">Records</string>
    <string name="aset">Aset</string>
    <string name="settings">Settings</string>
    <string name="asset">ASSET</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bills">Bills</string>
</resources>